--- a/package.json
+++ b/package.json
@@ -6,14 +6,21 @@
     "crypto-js": "^4.1.1",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "http": "^0.0.1-security",
     "https": "^1.0.0",
     "js-base64": "^3.7.5",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
     "moment": "^2.29.4",
     "mongodb": "^5.6.0",
+    "mongoose": "^8.0.3",
     "morgan": "^1.10.0",
-    "nodemailer": "^6.8.0"
+    "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.9.8",
+    "otp-generator": "^4.0.1",
+    "pdf-lib": "^1.17.1",
+    "socket.io": "^4.7.3",
+    "socket.io-client": "^4.7.3"
   },
   "scripts": {
     "start": "node server.js",
